--- a/src/global_styles.css
+++ b/src/global_styles.css
@@ -1,5 +1,5 @@
 @import '@fortawesome/fontawesome-free/css/all.css';
-@import 'swiper/css';
+/* @import 'swiper/css'; */
 
 @tailwind base;
 @tailwind components;
