Removed SSR, added contact Us page, cart not logged in feature added, footer categories fixed, profile address automatically added

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -27,7 +27,7 @@
                     <li><a routerLink="/collections/personalized-dolls" class="hover:text-primary">Personalized
                             Dolls</a></li>
                     <li><a routerLink="/collections/home-decor" class="hover:text-primary">Home Decor</a></li>
-                    <li><a routerLink="/collections/ahirus-stationery" class="hover:text-primary">Artistic
+                    <li><a routerLink="/collections/ahirus-stationery" class="hover:text-primary">Ahiru's
                             Stationery</a></li>
                     <li><a routerLink="/collections/invites-sketches" class="hover:text-primary">Invites & Sketches</a>
                     </li>
